Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@
  - main
 
  pool:
-   vmImage: 'ubuntu-latest' 
+   name: Self Pipelines 
 
  variables:
    imageName: 'pipelines-javascript-docker'
